client/cli/derive/tests/ui/substrate_cli/missing_sha_short.stderr
error: missing env variable VERGEN_SHA_SHORT. You might want to add a build.rs script that runs substrate_build_script_utils::generate_cargo_keys()
 --> $DIR/missing_sha_short.rs:5:1
  |
5 | #[substrate_cli(support_url = "http://example.org", copyright_start_year = 2020)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
